--- a/api/templates/editar.html
+++ b/api/templates/editar.html
@@ -1,4 +1,17 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} 
+{% block head %}
+
+<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/static/css/estilo.css" rel="stylesheet" />
+<link href="/static/css/iziModal.min.css" rel="stylesheet" />
+<script src="/static/js/jquery.slim.min.js"></script>
+<script src="/static/js/iziModal.min.js"></script>
+<script src="/static/js/popper.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/script.js"></script>
+{% endblock %}
+{% block content %}
+
 <div class="container">
   <div id="titulo" class="col-md-12">
     <h4>Editar</h4>
