--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -33,7 +33,7 @@
             <td>{{i.tipo_pagamento_id}}</td>
             <td>{{i.categoria_id}}</td>
             <td><a href="{{url_for('api.editar',id=i.id)}}" class="btn btn-primary">Editar</a>
-            <a href="{{url_for('api.deletar',id=i.id)}}" class="btn btn-danger">Deletar</a></td>
+            <a href="{{url_for('api.deletar',id=i.id)}}" class="btn btn-danger" onclick="return confirm ('Tem certeza que deseja apagar?')">Deletar</a></td>
           </tr>
           
           {% endfor %}
