--- a/api/templates/layout.html
+++ b/api/templates/layout.html
@@ -10,6 +10,7 @@
     
 
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../static/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="../static/css/estilo.css" rel="stylesheet" />
     <link href="../static/css/iziModal.min.css" rel="stylesheet" />
     <script src="../static/js/jquery.slim.min.js"></script>
